# payments-book

./: .chktexrc  .gitignore  .latexindent.yaml  .latexmkrc  .zenodo.json  AUTHORING.md  CITATION.cff  CONTRIBUTING.md  ERRATA.md  Makefile  PLAN.md  README.md  TODO-fact-check.md  kao.sty  kaobook-local-patches.tex  payments-book.tex  tex-fmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: clarification.yml  config.yml  errata.yml
.github/workflows/: ci.yml  release.yml
archive/manual-glossary/: app-a-glossary.tex  static-backmatter-glossary-2026-03.tex
assets/: bibliography.bib  term-canon.md
assets/covers/: contact-sheet.tex  cover-option-1-crystal-mesh.tex  cover-option-2-signal-constellation.tex  cover-option-3-layered-ledger-cloud.tex  cover-option-4-core-and-perimeter.tex  cover-option-5-fractured-topology.tex
assets/figures/: README.md  manifest.yaml  placement-audit.md
samples/: .editorconfig  Makefile  README.md  pyproject.toml
samples/ch03-luhn/: luhn.py  test_luhn.py
samples/ch05-iso8583-anatomy/: anatomy.py  test_anatomy.py
samples/ch05-iso8583-bitmap/: bitmap.py  test_bitmap.py
samples/ch06-iso8583-anatomy/: anatomy.py  test_anatomy.py
samples/ch06-iso8583-bitmap/: bitmap.py  test_bitmap.py
samples/ch07-emv-tlv/: de55.py  test_de55.py  test_tlv.py  tlv.py
samples/ch09-bin-last4/: bin_last4.py  test_bin_last4.py
samples/ch09-token-domain/: test_token_domain.py  token_domain.py
samples/ch10-dukpt/: dukpt.py  test_dukpt.py
samples/ch10-emv-keys/: emv_keys.py  test_emv_keys.py
samples/ch26-aml/: aml_classifier.py  structuring.py  test_aml_classifier.py  test_structuring.py
samples/ch26-sanctions/: test_screening.py
samples/ch27-sanctions/: metrics.py  screening.py  test_metrics.py  test_translit.py  translit.py
samples/ch27-velocity/: test_velocity.py  velocity.py
samples/ch28-mac-retry/: mac.py  test_mac.py
samples/ch28-velocity/: test_velocity.py  velocity.py
samples/ch30-reconciliation/: reconcile.py  test_reconcile.py
samples/ch32-cascade-retry/: retry.py  test_retry.py
samples/ch33-cascade-retry/: retry.py  test_retry.py
samples/ch33-ledger/: posting.py  test_posting.py
samples/ch34-fx-quote/: quote.py  test_quote.py
samples/ch34-ledger/: posting.py
scripts/: aggregate_bib_results.py  audit_figure_placement.rb  build.sh  build_figure_manifest.rb  build_generated_figures.rb  check_figure_coverage.rb  check_generated_figures.rb  detect_polish.py  detect_whitespace.py  env-check.sh  excalidraw2svg.py  extract_bib_contexts.py  extract_short.py  gen-gitversion.sh  gen_fix_workflow.py  gen_polish_workflow.py  gen_reflow_workflow.py  gen_round2_workflow.py  label2bound.py  latexindent_formatter.py  log-summary.sh  make_bib_batches.py  margin_audit.py  recolor.py  reflow.py  reflow_plan_r1.py  reflow_prep.py  reflow_synthesize.py  render-all.py  render-chapter.py  section-sizes.sh  svg2pdf.py  term_audit.py  texlive-runner.sh  typography.py
scripts/figures/: _common.py  gen_aip_anatomy.py  gen_bitmap_presence.py  gen_card_personalization_flow.py  gen_cid_anatomy.py  gen_cover.py  gen_csu_anatomy.py  gen_cvm_list_anatomy.py  gen_cvr_anatomy.py  gen_emv_cert_recovery.py  gen_mti_0100_anatomy.py  gen_pdol_anatomy.py  gen_pin_block_format0.py  gen_secure_messaging.py  gen_service_code.py  gen_tsi_anatomy.py  gen_tvr_anatomy.py
scripts/hooks/: pre-commit
src/: commands.tex  figure-styles.tex  main.tex  preamble.tex  styles.tex
src/appendices/: app-a-glossary.tex  app-b-ecosystem-map.tex  app-c-integration-checklist.tex  app-d-saq-decision-tree.tex  app-e-sca-decision-tree.tex
(+288 files in other folders)
