[project]
name = "payments-book-samples"
version = "0"
description = "Verified Python code samples that appear in the book"
requires-python = ">=3.14"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.13",
]

[tool.ruff]
line-length = 88
target-version = "py314"
src = ["."]

[tool.ruff.lint]
select = [
    "E", "F", "W",    # pyflakes / pycodestyle
    "I",              # isort
    "UP",             # pyupgrade
    "B",              # bugbear
    "SIM",            # simplify
    "RUF",            # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["B011"]  # allow assert in tests

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = "-x --strict-markers -q"
testpaths = ["."]
python_files = ["test_*.py"]
