[project]
name = "payments-book-samples"
version = "0"
description = "Verified Python code samples that appear in the book"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=42",
    "iuliia>=0.13",
    "jellyfish>=1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.13",
]

[tool.ruff]
line-length = 88
target-version = "py314"
src = ["."]
indent-width = 2

[tool.ruff.lint]
select = [
    "E", "F", "W",    # pyflakes / pycodestyle
    "I",              # isort
    "UP",             # pyupgrade
    "B",              # bugbear
    "SIM",            # simplify
    "RUF",            # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "RUF001", # ambiguous-unicode in strings (Cyrillic vs Latin lookalikes)
    "RUF002", # ambiguous-unicode in docstrings
    "RUF003", # ambiguous-unicode in comments
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["B011"]  # allow assert in tests

[tool.ruff.lint.isort]
# Каждый sample-каталог импортирует свой модуль как first-party.
known-first-party = [
    "aml_classifier",
    "bin_last4",
    "bitmap",
    "de55",
    "dukpt",
    "emv_keys",
    "luhn",
    "mac",
    "posting",
    "quote",
    "reconcile",
    "retry",
    "screening",
    "structuring",
    "tlv",
    "token_domain",
    "velocity",
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = "-x --strict-markers -q"
testpaths = ["."]
python_files = ["test_*.py"]
